# stem-agent

./: .gitignore  README.md  pyproject.toml
artifacts/runs/news-scraper-09/: baseline_docs.md  eval_report.json  evolved_docs.md  repo_profile.json
fixtures/fastapi_service/: README.md
fixtures/fastapi_service/app/: main.py  models.py  settings.py
fixtures/fastapi_service/docs/: API_NOTES.md
fixtures/fastapi_service/tests/: test_billing.py  test_health.py
fixtures/news-scraper/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
fixtures/news-scraper/scripts/: setup_db.py  test_openai_api.py  test_run.py  test_smtp.py
fixtures/news-scraper/src/: __init__.py  config.py  db.py  generator.py  models.py  notifier.py  publisher.py  scorer.py
fixtures/news-scraper/src/fetchers/: __init__.py  base.py  googlenews.py  hackernews.py  rss.py
fixtures/news-scraper/tests/: test_generator.py  test_notifier.py  test_scorer.py
fixtures/python_cli_tool/: README.md  pyproject.toml
fixtures/python_cli_tool/docs/: USAGE.md
fixtures/python_cli_tool/src/: cleaner.py  cli.py  exporter.py  reporting.py
fixtures/python_cli_tool/tests/: test_cleaner.py  test_reporting.py
fixtures/react_component_lib/: README.md  package.json
fixtures/react_component_lib/docs/: COMPONENTS.md
fixtures/react_component_lib/src/: Badge.tsx  Button.test.tsx  Button.tsx  Card.test.tsx  Card.tsx  Input.tsx  index.ts  theme.ts  (+1 more)
sandbox/: Dockerfile  run_tool.py
src/evaluation/: __init__.py  evaluator.py
src/stem_doc_agent/: __init__.py  llm.py  main.py  scanner.py
(+50 files in other folders)
